fix: fix failing tests
